# TangkuAgentOS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.m  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMPTY_PACKAGE_EVALUATION_REPORT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.yaml  config.yaml.example  pyproject.toml
.github/ISSUE_TEMPLATE/: architecture_proposal.md  documentation.md
.github/workflows/: tests.yml
benchmarks/: README.md
docs/: IMPLEMENTATION_ROADMAP.md  provider_hub.md  quickstart_rc1.md  release_notes_rc1.md
examples/: __init__.py  basic_usage.py  simple_workflow.py
tangku_agentos/: __init__.py  __main__.py
tangku_agentos/agent/: agent.py
tangku_agentos/agent_framework/: __init__.py  agents.py  base.py  collaboration.py  demo.py  execution.py  models.py
tangku_agentos/agent_intelligence/: __init__.py  manager.py  models.py
tangku_agentos/agent_runtime/: __init__.py  agent.py  agent_manager.py  core.py  exceptions.py  lifecycle.py  manager.py  runtime.py  scheduler.py  supervisor.py  types.py
tangku_agentos/agentos/: __init__.py  agents.py  capabilities.py  constants.py  context.py  exceptions.py  execution.py  interfaces.py  manager.py  manager_impl.py  messages.py  permissions.py  registry.py  resources.py  scheduler.py  session.py  types.py
tangku_agentos/ai_foundation/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  __init__.py
tangku_agentos/artifact_runtime/: __init__.py  interfaces.py  models.py
tangku_agentos/assets/: README.md
tangku_agentos/automation_platform/: __init__.py  interfaces.py  manager.py  models.py  registry.py
tangku_agentos/automation_runtime/: __init__.py  models.py  runtime.py
tangku_agentos/background_services/: __init__.py  interfaces.py  manager.py  models.py  registry.py
tangku_agentos/browser_runtime/: __init__.py  manager.py  models.py
tangku_agentos/capability_layer/: __init__.py  dispatcher.py  events.py  exceptions.py  interfaces.py  manager.py  models.py  registry.py  resolver.py
tangku_agentos/cli/: __init__.py  cli.py
tangku_agentos/coding_platform/: __init__.py  intelligence.py  interfaces.py  manager.py  models.py  registry.py
tangku_agentos/cognitive_system/: IMPLEMENTATION_SUMMARY.md  __init__.py  exceptions.py
tests/: __init__.py  test_agent_framework_smoke.py  test_agent_intelligence_smoke.py  test_automation_runtime_smoke.py  test_browser_runtime_smoke.py  test_code_intelligence_smoke.py  test_context_engine_backend.py  test_developer_platform_smoke.py  test_execution_runtime_smoke.py  test_integration.py  test_interface_web_dashboard.py  test_kernel.py  test_kernel_runtime_backend.py  test_kernel_smoke.py  test_knowledge_engine_backend.py  test_knowledge_semantic_smoke.py  test_memory_engine_backend.py  test_multi_agent_coordination_smoke.py  test_multi_agent_runtime_backend.py  test_observability_runtime_smoke.py  test_phase3_capabilities.py  test_planning_reasoning_backend.py  test_planning_runtime_smoke.py  test_plugin_runtime_smoke.py  test_provider_backend.py  test_provider_hub.py  test_provider_integration_smoke.py  test_repository_intelligence_smoke.py  test_software_engineering_smoke.py  test_terminal_runtime_smoke.py  test_tool_runtime_core_tools.py  test_workflow_orchestration_smoke.py  test_workspace_runtime_smoke.py
(+619 files in other folders)
